--- a/src/popup/components/layout/Footer.scss
+++ b/src/popup/components/layout/Footer.scss
@@ -1,7 +1,6 @@
 footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+  //position: absolute;
+  //bottom: 0;
   background-color: white;
   border-top: 1px solid #ddd !important;
 }
