--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 #root {
-  width: 300px;
-  height: 550px;
-  /*margin: 0 auto;*/
-  /*text-align: center;*/
-  /*position: relative;*/
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
