--- a/src/popup/components/layout/Header.scss
+++ b/src/popup/components/layout/Header.scss
@@ -1,6 +1,4 @@
 header {
-  top: 0;
-  width: 100%;
   background-color: white;
   border-bottom: 1px solid #ddd !important;
 }
@@ -8,6 +6,7 @@ header {
 .logo-wrapper {
   @include flex-center;
   width: 100%;
+  height: 100%;
 
   .logo {
     font-size: 1.5rem;
