--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -119,21 +119,6 @@ button {
   }
 }
 
-.list-item {
-  background-color: white;
-  color: black;
-  border: none;
-  cursor: pointer;
-  padding: 10px;
-  border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 0, rgba(0, 0, 0, 0.06) 0 1px 2px 0;
-
-  &:active {
-    transform: scale(0.96);
-    transition: transform 0.1s;
-  }
-}
-
 .modal-wrapper {
   @include flex-center;
   flex-direction: column;
@@ -197,4 +182,20 @@ footer {
   height: 80px;
   width: 100%;
   overflow: visible;
+}
+
+.draggableDiv {
+  width: 100%;
+  background-color: white;
+  color: black;
+  border: none;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 0, rgba(0, 0, 0, 0.06) 0 1px 2px 0;
+  @include flex-center;
+
+  &:active {
+    transform: scale(0.96);
+    transition: transform 0.1s;
+  }
 }
