feat: 즐겨찾기 페이지 UI 구현
- 즐겨찾기 페이지 UI를 구현하였습니다.
- Darkmode UI 또한 구현하였습니다.
- Footer 즐겨찾기 UI 추가하였습니다.

--- a/src/index.scss
+++ b/src/index.scss
@@ -58,5 +58,10 @@
       background-color: #6c6fe6;
     }
   }
+
+  .favorite-snippets-header,
+  .hotkey-button{
+    border: 1px solid white;
+  }
 }
 
