feat: 단축키 기능 추가
- manifest 내 command 기능 통해 최대 4개까지 단축키 기능 지원

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,7 +23,7 @@
   color: #f7f7f7;
 
   .modal-wrapper {
-    background-color: #262626;
+    background-color: #262626 !important;
     color: #f7f7f7;
 
     .modal-title,
