--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -201,3 +201,9 @@ footer {
     transition: transform 0.1s;
   }
 }
+
+.favorite-snippets-header-icon {
+  color: #FDCC0D;
+  width: 24px;
+  height: 24px;
+}
