--- a/src/popup/components/Favorite.scss
+++ b/src/popup/components/Favorite.scss
@@ -8,13 +8,6 @@
   box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 0, rgba(0, 0, 0, 0.06) 0 1px 2px 0;
   @include flex-center;
   gap: 10px;
-
-  .favorite-snippets-header-icon {
-    color: #FFF600;
-    fill: #FFF600;
-    width: 24px;
-    height: 24px;
-  }
 }
 
 .no-favorite-snippets-wrapper {
@@ -37,4 +30,8 @@
       border-radius: 5px;
     }
   }
+}
+
+.snippet-list-wrapper {
+  margin-top: 10px;
 }
