--- a/src/popup/components/Favorite.scss
+++ b/src/popup/components/Favorite.scss
@@ -8,6 +8,7 @@
   box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 0, rgba(0, 0, 0, 0.06) 0 1px 2px 0;
   @include flex-center;
   gap: 10px;
+  margin-bottom: 10px;
 }
 
 .no-favorite-snippets-wrapper {
@@ -30,8 +31,4 @@
       border-radius: 5px;
     }
   }
-}
-
-.snippet-list-wrapper {
-  margin-top: 10px;
 }
