chore: 코드 스타일 개선

--- a/src/popup/components/Setting.scss
+++ b/src/popup/components/Setting.scss
@@ -4,7 +4,7 @@
   margin-top: 20px;
 
   &::before {
-    content: '테마';
+    content: "테마";
     position: absolute;
     top: -20px;
     left: 10px;
@@ -45,7 +45,6 @@
   @include flex-center;
   flex-direction: column;
   width: 100%;
-
 
   .modal-setting-description {
     @include flex-center;
