--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@
 
 .light-mode {
   color-scheme: light;
-  background-color: #F8F7F4;
+  background-color: #f8f7f4;
   color: black;
 
   input,
@@ -31,7 +31,7 @@
     .modal-name,
     .modal-edit-name,
     .modal-input,
-    .modal-textarea{
+    .modal-textarea {
       background-color: #17171b;
       color: #f7f7f7;
     }
@@ -50,7 +50,7 @@
   }
 
   button {
-    background-color: #F8F7F4;
+    background-color: #f8f7f4;
     color: black;
     border: 1px solid white;
 
@@ -60,8 +60,7 @@
   }
 
   .favorite-snippets-header,
-  .hotkey-button{
+  .hotkey-button {
     border: 1px solid white;
   }
 }
-
