--- a/src/popup/components/Favorite.scss
+++ b/src/popup/components/Favorite.scss
@@ -1,11 +1,13 @@
 .favorite-snippets-header {
   width: 100%;
-  background-color: #1D3461;
+  background-color: #1d3461;
   color: white;
   border: none;
   padding: 10px;
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 0, rgba(0, 0, 0, 0.06) 0 1px 2px 0;
+  box-shadow:
+    rgba(0, 0, 0, 0.1) 0 1px 3px 0,
+    rgba(0, 0, 0, 0.06) 0 1px 2px 0;
   @include flex-center;
   gap: 10px;
   margin-bottom: 10px;
@@ -23,8 +25,10 @@
     @include flex-center;
 
     .hotkey-button {
-      background-color: #1D3461;
-      box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 0, rgba(0, 0, 0, 0.06) 0 1px 2px 0;
+      background-color: #1d3461;
+      box-shadow:
+        rgba(0, 0, 0, 0.1) 0 1px 3px 0,
+        rgba(0, 0, 0, 0.06) 0 1px 2px 0;
       max-width: 200px;
       color: white;
       padding: 5px;
