--- a/src/popup/components/Home.scss
+++ b/src/popup/components/Home.scss
@@ -15,7 +15,9 @@
   margin-top: 15px;
 
   &:hover {
-    transition: background-color 0.2s, box-shadow 0.2s;
+    transition:
+      background-color 0.2s,
+      box-shadow 0.2s;
     background-color: #16305a;
     box-shadow: 0 4px 12px rgba(29, 52, 97, 0.15);
   }
